# pmemfile

./: .gitignore  .mailmap  .travis.yml  CMakeLists.txt  ChangeLog  LICENSE  README.md  STATUS.md  codecov.yml  pmemfile-debug.spec  pmemfile.spec
src/libpmemfile/: CMakeLists.txt  fd_pool.c  fd_pool.h  libpmemfile-posix-fd_first.h  libpmemfile-posix-wrappers.h  libpmemfile-posix-wrappers2.h  libpmemfile.map  path_resolve.c  preload.c  preload.h  sys_util.h  syscall_early_filter.c  syscall_early_filter.h  vfd_table.c  vfd_table.h
src/libpmemfile-core/: CMakeLists.txt  block_array.c  callbacks.c  consts.c  ctree.c  data.c  data.h  dir.c  dir.h  file.c  file.h  inode.c  inode.h  inode_array.c  inode_array.h  internal.h  layout.h  libpmemfile-core.map  libpmemfile-core.pc.in  libpmemfile-posix.map  libpmemfile-posix.pc.in  locks.c  locks.h  os_locks.h  os_locks_pthread.c  os_thread.h  os_thread_pthread.c  os_tls.h  os_tls_pthread.c  os_util.h  os_util_linux.c  out.c  out.h  pmemfile-core.c  pmemfile-posix.c  pool.c  pool.h  stubs.c
src/libpmemfile-posix/: CMakeLists.txt  HACKING.txt  access.c  alloc.c  alloc.h  alloc_stub.c  block_array.c  block_array.h  blocks.c  blocks.h  cache.c  cache.h  callbacks.c  callbacks.h  chdir.c  chmod.c  chown.c  consts.c  copy_file_range.c  creds.c  creds.h  ctree.c  ctree.h  data.c  data.h  dir.c  dir.h  fallocate.c  fault_injection.h  fcntl.c  file.c  file.h  flock.c  getdents.c  hash_map.c  hash_map.h  inode.c  inode.h  inode_array.c  inode_array.h  (+45 more)
src/pmemfile-fuse/: CMakeLists.txt  main.c
src/tools/antool/: CMakeLists.txt  README  README.md  __init__.py  analyzer.py  antool.py  endoffile.py  exceptions.py  listsyscalls.py  setup.py.in  syscall.py  syscallinfo.py  syscalls-pmemfile.txt  syscalltable.py  utils.py
tests/: CMakeLists.txt  helpers.cmake  test_backtrace.c  test_backtrace.h
tests/antool/: .coveragerc  CMakeLists.txt  common.sh  cut-0.log.match  cut-1-1.log.match  cut-1-126-1.log.match  cut-1-13.log.match  cut-1-5.log.match  cut-1-6.log.match  cut-10.log.match  cut-11.log.match  cut-1148-12.log.match  cut-126-0.log.match  cut-126-15.log.match  cut-126-16.log.match  cut-126-9.log.match  cut-15.log.match  cut-2-1.log.match  cut-2-5.log.match  cut-3-5.log.match  cut-4-6.log.match  cut-4.log.match  cut-7.log.match  cut-8.log.match  cut-9.log.match  decompress-bin-arch.sh  dir_pmem-126-16.txt  dir_pmem.txt  helper_functions.sh  out-0-3.log.match  out-0-5.log.match  output-0.log.match  output-15.log.match  output-16.log.match  output-17.log.match  output-18.log.match  output-20.log.match  output-26.log.match  output-32.log.match  output-33.log.match  (+121 more)
tests/core/: CMakeLists.txt  core-helpers.cmake  helpers.cmake  pmemfile_test.c  pmemfile_test.cpp  pmemfile_test.h  pmemfile_test.hpp  posix-helpers.cmake
tests/core/basic/: TEST0  TEST1  TEST3  basic.c  basic.cpp  test.cmake
tests/core/crash/: crash.c  crash.cpp  test.cmake
tests/core/dirs/: TEST0  TEST1  dirs.c  dirs.cpp  test.cmake
tests/core/file_core_basic/: TEST2
tests/core/file_core_crash/: TEST0
tests/core/file_core_dirs/: TEST2
tests/core/file_core_getdents/: TEST0  TEST1  out0.log.match
tests/core/file_core_mt/: TEST2  TEST3  file_core_mt.c
tests/core/file_core_openp/: TEST0  TEST1  file_core_openp.c
tests/core/file_core_rw/: TEST2
tests/core/file_core_stat/: TEST1  TEST2  file_core_stat.c
tests/core/file_core_symlinks/: TEST0  file_core_symlinks.c
tests/core/getdents/: TEST2  getdents.c  getdents.cpp  none.err.match  test.cmake
tests/core/mt/: TEST0  TEST1  TEST4  mt.c  mt.cpp  test.cmake
tests/core/openp/: openp.c  openp.cpp  test.cmake
tests/core/permissions/: permissions.cpp
tests/core/rw/: TEST0  TEST1  TEST3  rw.c  rw.cpp  test.cmake
tests/core/stat/: TEST0  none.err.match  out0.log.match  stat.c  stat.cpp  test.cmake
tests/core/symlinks/: TEST1  symlinks.c  symlinks.cpp  test.cmake
tests/libpmemfile-pop/: CMakeLists.txt  pmemfilepool.c  utils.c  utils.h
tests/posix/: CMakeLists.txt  gtest.cmake  pmemfile_test.cpp  pmemfile_test.hpp  posix-helpers.cmake
tests/posix/basic/: basic.cpp
tests/posix/crash/: crash.cpp
tests/posix/dirs/: dirs.cpp
tests/posix/fcntl/: fcntl.cpp
tests/posix/getdents/: getdents.cpp  none.err.match
tests/posix/mt/: mt.cmake  mt.cpp
tests/posix/offset_mapping/: offset_mapping.cpp  offset_mapping_wrapper.c  offset_mapping_wrapper.h
tests/posix/openp/: openp.cpp
tests/posix/permissions/: permissions.cpp
tests/posix/pointer_caching/: pointer_caching.cpp
tests/posix/rw/: rw.cmake  rw.cpp
tests/posix/stat/: stat.cpp
tests/posix/suspend_resume/: suspend_resume.cpp
tests/posix/symlinks/: symlinks.cpp
tests/posix/timestamps/: timestamps.cpp
tests/preload/: CMakeLists.txt  helpers.cmake  preload-helpers.cmake  setumask.c
tests/preload/basic/: basic.c  basic.cmake  root_dir.expected_log  test.cmake
tests/preload/basic_commands/: basic_commands.cmake  ls_root_after_ln_expected_log  ls_root_after_lns_expected_log  ls_root_after_mv_expected_log  ls_root_after_rm_expected_log  ls_root_expected_log  ls_with_dir.log.match  ls_without_dir.log.match  test.cmake
tests/preload/config/: config.c  config.cmake  test.cmake
tests/preload/dup/: dup.c  dup.cmake
tests/preload/file_preload/: TEST1  TEST3  file_a_expected  file_preload_lsl1.log.match  file_preload_lsl_f2.log.match  file_preload_lsl_g2.log.match  file_preload_lsl_g_no33_no32_2.log.match  file_preload_lsla1.log.match  repo_dummy_file_b
tests/preload/nested_dirs/: ls.log.match  ls_a.log.match  ls_f.log.match  ls_g.log.match  ls_g_no33.log.match  ls_g_no33_no32.log.match  nested_dirs.cmake  test.cmake
tests/preload/pool_locking/: pool_locking.c  pool_locking.cmake
tests/preload/preload/: TEST0  TEST2  TEST4  a.expected_dump  dummy_prog.c  file_preload_lsl2.log.match  repo_dummy_file_a  (+2 more)
utils/transform/: CMakeLists.txt  fd_first_relevant_functions.h  function_decl_finder.c  function_decl_finder.h  generator.c  generator.h  transform_pmemfile_posix.c  transform_pmemfile_posix_fd_first.c  transform_pmemfile_posix_level2.c
(+133 files in other folders)
